changing flashback page to have vodqa logo and not text

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>VodQA Chennai - Dec 2016</title>
+    <title>VodQA Coimbatore - Dec 2016</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -187,7 +187,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    12:00 pm
+                    12:00 PM 
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
@@ -207,7 +207,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    12:30 pm
+                    12:30 PM 
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-3"
@@ -227,7 +227,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    1:30 pm
+                    1:30 PM 
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
@@ -285,6 +285,14 @@
                 <li>
                     <a href="./" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1" class="active">
                         <div class="month">Dec</div>
+                        <div class="day">03</div>
+                        <div class="year">2016</div>
+                    </a>
+                </li>
+                
+                <li>
+                    <a href="./sep2016.html" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1" class="">
+                        <div class="month">Sep</div>
                         <div class="day">03</div>
                         <div class="year">2016</div>
                     </a>
