--- a/content/2016-12.html
+++ b/content/2016-12.html
@@ -1,8 +1,8 @@
 ---
 start: 2016-12-03 11:00
 edition: 1
-talk: "http://goo.gl/forms/or0ubaU5AL"
-participate: "participate.html"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+participate: "https://www.meetup.com/VodQA-Coimbatore/events/235458537/"
 agenda:
   -
     time: "11:00 AM"
