[Agalya/Abi] Modify links for coimbatore accordingly

--- a/content/2016-12.html
+++ b/content/2016-12.html
@@ -5,18 +5,21 @@ talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJf
 participate: "https://www.meetup.com/VodQA-Coimbatore/events/235458537/"
 agenda:
   -
-    time: "11:00 AM"
-    title: Welcome Note
+    time: "10:00 AM"
+    title: "Registrations"
+  -
+    time: "10:30 AM"
+    title: "Session 1"
   -
     time: "11:15 AM"
-    title: "TBD"
+    title: "Break"
   -
-    time: "12:00 PM"
-    title: "TBD"
+    time: "11:30 AM"
+    title: "Session 2"
   -
-    time: "12:30 PM"
-    title: "TBD"
+    time: "12:15 PM"
+    title: "Session 3"
   -
-    time: "1:30 PM"
-    title: "TBD"
+    time: "01:00 PM"
+    title: "Networking and Lunch"
 ---
