--- a/content/2016-12.html
+++ b/content/2016-12.html
@@ -9,17 +9,21 @@ agenda:
     title: "Registrations"
   -
     time: "10:30 AM"
-    title: "Session 1"
+    title: "History of test automation"
   -
-    time: "11:15 AM"
-    title: "Break"
+    time: "11:00 AM"
+    title: "Selenium & Page object model"
   -
     time: "11:30 AM"
-    title: "Session 2"
+    title: "Break"
+  -
+    time: "11:45 PM"
+    title: "Techniques and tricks in using locators"
   -
     time: "12:15 PM"
-    title: "Session 3"
+    title: "Behavior Driven Tests with Selenium Webdriver"
   -
-    time: "01:00 PM"
+    time: "1:00 PM"
     title: "Networking"
+
 ---
