[Abi] Add speakers

--- a/content/2016-12.html
+++ b/content/2016-12.html
@@ -10,20 +10,23 @@ agenda:
   -
     time: "10:30 AM"
     title: "History of test automation"
+    speaker: "Nanthakumar Arumugam"
   -
     time: "11:00 AM"
     title: "Selenium & Page object model"
+    speaker: "Arvind Srinivasan V"
   -
     time: "11:30 AM"
     title: "Break"
   -
     time: "11:45 PM"
     title: "Techniques and tricks in using locators"
+    speaker: "Sriram Subramanian"
   -
     time: "12:15 PM"
     title: "Behavior Driven Tests with Selenium Webdriver"
+    speaker: "Sandhya S"
   -
     time: "1:00 PM"
     title: "Networking"
-
 ---
