[Agalya/Abi] Add og image in header

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -9,6 +9,9 @@
     <title>VodQA Coimbatore - Dec 2016</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta property="og:description" />
+      <h9>VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world.</h9>
+      <meta property="og:image" content="./img/vodqa-og-image.png" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -39,11 +42,10 @@
                 <div class = "vodqa-logo">
                     <img class="small-8" src="./img/Vodqa-white.png" alt="VodQA" align="center" />
                 </div>
-                <meta property="og:description" />        
+                <meta property="og:description" />
                 <h9>VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world.</h9>
                 <meta property="og:image" content="./img/vodqa-og-image.png" />
               
-                
             </div>
         </div>
 
