--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -9,10 +9,9 @@
     <title>VodQA Coimbatore - Dec 2016</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta property="og:description" />
-      <h9>VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world.</h9>
-      <meta property="og:image" content="./img/vodqa-og-image.png" />
-
+    <meta property="og:description" content="VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world." />
+    <meta property="og:image" content="https://twcbe.github.io/vodqa/img/vodqa-og-image.png" />
+    <meta property="og:image:type" content="image/png" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -42,10 +41,9 @@
                 <div class = "vodqa-logo">
                     <img class="small-8" src="./img/Vodqa-white.png" alt="VodQA" align="center" />
                 </div>
-                <meta property="og:description" />
-                <h9>VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world.</h9>
-                <meta property="og:image" content="./img/vodqa-og-image.png" />
+
               
+                
             </div>
         </div>
 
