--- a/gh-pages/participate.html
+++ b/gh-pages/participate.html
@@ -9,7 +9,9 @@
     <title>VodQA Coimbatore - Participants Registration</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta property="og:description" content="VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world." />
+    <meta property="og:image" content="https://twcbe.github.io/vodqa/img/vodqa-og-image.png" />
+    <meta property="og:image:type" content="image/png" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
