[Agalya/Abi] Speaker name edit and add lunch

--- a/content/2016-12.html
+++ b/content/2016-12.html
@@ -16,7 +16,7 @@ agenda:
     time: "11:00 AM"
     title: "Selenium & Page object model"
     subtitle: "Come let us see if page object pattern really makes the code lot readable and easily maintainable with an example."
-    speaker: "Arvind Srinivasan V - Senior Consultant, ThoughtWorks and Sravanthi Singaraju - Consultant, ThoughtWorks."
+    speaker: "Sravanthi Singaraju - Consultant, ThoughtWorks and Arvind Srinivasan V - Senior Consultant, ThoughtWorks"
   -
     time: "11:30 AM"
     title: "Break"
@@ -32,7 +32,7 @@ agenda:
     speaker: "Sandhya S - Lead Consultant, ThoughtWorks."
   -
     time: "1:00 PM"
-    title: "Networking"
+    title: "Networking & Lunch"
 ---
 
 
