--- a/content/2017-02.html
+++ b/content/2017-02.html
@@ -9,16 +9,19 @@ agenda:
     title: "Registrations"
   -
     time: "10:30 AM"
-    title: "Session 1 - TBD "
+    title: " Deliver - Anything, Anywhere, Anytime "
+    speaker: "Poornima S, ThoughtWorks."
   -
     time: "11:15 AM"
-    title: "Session 2 - TBD "
+    title: " Dockerize your tests "
+    speaker: "Abinaya Veluswamy & Agalya Dhandapani, ThoughtWorks."
   -
-    time: "12:00 AM"
+    time: "12:00 PM"
     title: "Break"
   -
     time: "12:15 PM"
-    title: "Session 3 - TBD "
+    title: " A glimpse into mobile app testing using appium "
+    speaker: "Thivya Lakshimi, ThoughtWorks."
   -
     time: "1:00 PM"
     title: "Networking & Lunch"
