--- a/content/2017-02.html
+++ b/content/2017-02.html
@@ -10,21 +10,21 @@ agenda:
   -
     time: "10:30 AM"
     title: " Deliver - Anything, Anywhere, Anytime "
-    speaker: "Poornima S, ThoughtWorks."
+    speaker: "Poornima Sarangapani, Senior Consultant - ThoughtWorks."
   -
     time: "11:15 AM"
     title: " Dockerize your tests "
-    speaker: "Abinaya Veluswamy & Agalya Dhandapani, ThoughtWorks."
+    speaker: "Abinaya Veluswamy - Senior Consultant & Agalya Dhandapani - Senior Consultant , ThoughtWorks."
   -
     time: "12:00 PM"
     title: "Break"
   -
     time: "12:15 PM"
     title: " A glimpse into mobile app testing using appium "
-    speaker: "Thivya Lakshimi, ThoughtWorks."
+    speaker: "Thivya Lakshimi, Consultant - ThoughtWorks."
   -
     time: "1:00 PM"
-    title: "Networking & Lunch"
+    title: "Networking"
 ---
 
 
