<Suren> making changes on Sep2018 for page navigation

--- a/gh-pages/sep2018.html
+++ b/gh-pages/sep2018.html
@@ -256,7 +256,7 @@
             <ul class="grid">
 
               <li>
-                    <a href="./" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1" class="active">
+                    <a href="./sep2018.html" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1" class="active">
                         <div class="month">Sep</div>
                         <div class="day">01</div>
                         <div class="year">2018</div>
