Updating changes for VODQA 9th Edition , Aug 2020.

--- a/content/2020-08.html
+++ b/content/2020-08.html
@@ -1,16 +1,30 @@
 ---
-start: 2020-08-29 09:30
-edition: 8
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"//Needs to be changed
+start: 2020-08-29 09:45
+edition: 9
 participate: "https://thoughtworks.zoom.us/webinar/register/WN_hAo4bVlkRQeR01270inbSg"
 agenda:
 -
-time: "09:30 AM"
+time: "09:45 AM"
 title: "Welcome Note"
 -
-time: "09:45 AM"
+time: "10:00 AM"
 title: "What's interesting in Puppeteer"
 -
 time: "11:00 AM"
 title: "Chaos Testing - Identifying System Fault tolerance"
+---
+---
+start: 2020-09-05 09:45
+edition: 9
+participate: "https://thoughtworks.zoom.us/webinar/register/WN_hAo4bVlkRQeR01270inbSg"
+agenda:
+-
+time: "09:45 AM"
+title: "Welcome Note"
+-
+time: "10:00 AM"
+title: "Performance tests as code"
+-
+time: "11:00 AM"
+title: "Dockerising Performance Test Suite"
 ---
