Removed manually created aug 2020 file and updated 2020-08.html file

--- a/content/2020-08.html
+++ b/content/2020-08.html
@@ -9,6 +9,7 @@ title: "Welcome Note"
 -
 time: "10:00 AM"
 title: "What's interesting in Puppeteer"
+speaker: "Shoban Manohar, Senior Consultant - ThoughtWorks."
 -
 time: "11:00 AM"
 title: "Chaos Testing - Identifying System Fault tolerance"
