Updated Version VodQA Aug/Sep 2020 Rudhra/Loges

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 <!--[if lte IE 8]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" rel="nofollow">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-<section id="twlogo">
-    <a href="http://www.thoughtworks.com" target="_blank"
-       onclick="ga('send', 'event', 'tw', 'tw')">
-        <img src="./img/TW_LOGOS_trans_black.png" alt="ThoughtWorks"  style="text-align:right;width:50%;height:50%" />
-    </a>
-    <br>
-<div class="row" >
-    <div class="large-3 columns" >
-        <a href="http://www.thoughtworks.com" target="_blank"
-           onclick="ga('send', 'event', 'tw', 'tw')">
-            <img src="./img/TW_LOGOS_trans_black.png" alt="ThoughtWorks" align="right" />
-        </a>
-                    <div class = "vodqa-logo">
-                        <img class="small-8" src="./img/Vodqa-Latest2020.png" alt="VodQA" align="center" />
-                    </div>
-                    <h5>Flashback</h5>
-    </div>
-</div>
-</section>
+<!--<section id="twlogo">-->
+<!--    <a href="http://www.thoughtworks.com" target="_blank"-->
+<!--       onclick="ga('send', 'event', 'tw', 'tw')">-->
+<!--        <img src="./img/TW_LOGOS_trans_black.png" alt="ThoughtWorks"  style="text-align:right;width:50%;height:50%" />-->
+<!--    </a>-->
+<!--    <br>-->
+<!--&lt;!&ndash;<div class="row" >&ndash;&gt;-->
+<!--&lt;!&ndash;    <div class="large-3 columns" >&ndash;&gt;-->
+<!--&lt;!&ndash;        <a href="http://www.thoughtworks.com" target="_blank"&ndash;&gt;-->
+<!--&lt;!&ndash;           onclick="ga('send', 'event', 'tw', 'tw')">&ndash;&gt;-->
+<!--&lt;!&ndash;            <img src="./img/TW_LOGOS_trans_black.png" alt="ThoughtWorks" align="right" />&ndash;&gt;-->
+<!--&lt;!&ndash;        </a>&ndash;&gt;-->
+<!--&lt;!&ndash;        &lt;!&ndash;            <div class = "vodqa-logo">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;        &lt;!&ndash;                <img class="small-8" src="./img/Vodqa-Latest2020.png" alt="VodQA" align="center" />&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;        &lt;!&ndash;            </div>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;        &lt;!&ndash;            <h5>Flashback</h5>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--</section>-->
 
 
 <section id="intro" class="feature">
