--- a/content/2020-08.html
+++ b/content/2020-08.html
@@ -1,31 +1,28 @@
 ---
 start: 2020-08-29 09:45
 edition: 9
+talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
 participate: "https://thoughtworks.zoom.us/webinar/register/WN_hAo4bVlkRQeR01270inbSg"
-agenda:
--
-time: "09:45 AM"
-title: "Welcome Note"
--
-time: "10:00 AM"
-title: "What's interesting in Puppeteer"
-speaker: "Shoban Manohar, Senior Consultant - ThoughtWorks."
--
-time: "11:00 AM"
-title: "Chaos Testing - Identifying System Fault tolerance"
----
----
-start: 2020-09-05 09:45
-edition: 9
-participate: "https://thoughtworks.zoom.us/webinar/register/WN_hAo4bVlkRQeR01270inbSg"
-agenda:
--
-time: "09:45 AM"
-title: "Welcome Note"
--
-time: "10:00 AM"
-title: "Performance tests as code"
--
-time: "11:00 AM"
-title: "Dockerising Performance Test Suite"
+webinar: true
+sessions:
+  - title: "Aug 29 2020"
+    agenda:
+      - time: "09:45 AM"
+        title: "Welcome Note"
+      - time: "10:00 AM"
+        title: "What's interesting in Puppeteer"
+        speaker: "Shoban Manohar, Senior Consultant - ThoughtWorks."
+      - time: "11:00 AM"
+        title: "Chaos Testing - Identifying System Fault tolerance"
+        speaker: "Abinandan K - Senior Consultant, ThoughtWorks."
+  - title: "Sep 05 2020"
+    agenda:
+      - time: "09:45 AM"
+        title: "Welcome Note"
+      - time: "10:00 AM"
+        title: "Performance tests as code"
+        speaker: "Abdul Kamaldeen - Consultant & Ramprasanth Azhagappan - Senior Consultant, ThoughtWorks."
+      - time: "11:00 AM"
+        title: "Dockerising Performance Test Suite"
+        speaker: "Sathya Subramani - Consultant & U Ravi Prasanth - Consultant, ThoughtWorks."
 ---
