--- a/gh-pages/feb2017.html
+++ b/gh-pages/feb2017.html
@@ -223,7 +223,7 @@
             <blockquote>
                 <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">vodQA, also called Value Oriented Discussion on Quality Analysis is a forum that sports the moto -  'Come Learn Something New'. The forum offers a unique platform within the software testing industry to strengthen the QA community through knowledge sharing.</p>
 
-                <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>This time around its a workshop on Security Testing. You will have the experience of learning some new ways of approaching the problem in hand.</small></p>
+                <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>vodQA aims at taking you to another level altogether, where you get a wider perspective of testing. You will have the experience of learning some new ways of approaching the problem in hand.</small></p>
 
                 <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://vodqa-chennai.typeform.com/to/SLjLWo" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
 
