--- a/content/2020-08.html
+++ b/content/2020-08.html
@@ -11,7 +11,7 @@ sessions:
         title: "Welcome Note"
       - time: "10:00 AM"
         title: "What's interesting in Puppeteer"
-        speaker: "Shoban Manohar, Senior Consultant - ThoughtWorks."
+        speaker: "Shoban Manohar - Senior Consultant, ThoughtWorks."
       - time: "11:00 AM"
         title: "Chaos Testing - Identifying System Fault tolerance"
         speaker: "Abinandan K - Senior Consultant, ThoughtWorks."
