[Ramki] Update agdneda of 9th edition

--- a/content/2020-08.html
+++ b/content/2020-08.html
@@ -15,6 +15,9 @@ sessions:
       - time: "11:00 AM"
         title: "Chaos Testing - Identifying System Fault tolerance"
         speaker: "Abinandan K - Senior Consultant, ThoughtWorks."
+      - time: "11:15 AM"
+        title: "The New Realities"
+        speaker: "Jayachandran S - Senior Consultant, ThoughtWorks."
   - title: "Sep 05 2020"
     agenda:
       - time: "09:45 AM"
