--- a/preview.html
+++ b/preview.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:title" />
-    <title>VodQA Coimbatore - Preview</title>
+    <title>vodQA Coimbatore - Preview</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -21,11 +21,11 @@
     <![endif]-->
 
     <section id="about" class="feature">
-      <h2 class="header">VodQA Coimbatore</h2>
+      <h2 class="header">vodQA Coimbatore</h2>
 
       <div class="content">
         <div class="content-inner">
-          <p>About VodQA Coimbatore</p>
+          <p>About vodQA Coimbatore</p>
         </div>
       </div>
     </section>
