[JC/Dhivya]-Added content for Nov 2020 vodqa edition 11

--- a/content/2020-11.html
+++ b/content/2020-11.html
@@ -1,10 +1,11 @@
 ---
-start: 2020-10-10 09:45
-edition: 10
+start: 2020-11-21 09:45
+edition: 11
 talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
 participate: "http://bit.ly/vodqa-tw"
 registrationopen: "true"
 webinar: true
+tagline: "Looking to automate your non functional requirements? Join us for a hands-on workshop on Puppeteer."
 sessions:
   - title: ""
     agenda:
