--- a/gh-pages/dec2016.html
+++ b/gh-pages/dec2016.html
@@ -293,6 +293,14 @@
                 
                 <li>
                     <a href="./" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1" class="">
+                        <div class="month">Nov</div>
+                        <div class="day">21</div>
+                        <div class="year">2020</div>
+                    </a>
+                </li>
+                
+                <li>
+                    <a href="./oct2020.html" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1" class="">
                         <div class="month">Oct</div>
                         <div class="day">10</div>
                         <div class="year">2020</div>
