[Dhivya] updating for Nov 21st vodqa workshop

--- a/gh-pages/oct2020.html
+++ b/gh-pages/oct2020.html
@@ -280,7 +280,7 @@
                 <ul class="right">
                     <li>
                     
-                        <a href="http://bit.ly/vodqa-tw" target="_blank" rel="nofollow"
+                        <a href="http://bit.ly/vodqa-nov-tw" target="_blank" rel="nofollow"
                            onclick="ga('send', 'event', 'participate', 'participate')">
                             Participate
                         </a>
