--- a/content/2020-11.html
+++ b/content/2020-11.html
@@ -2,18 +2,18 @@
 start: 2020-11-21 09:45
 edition: 11
 talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
-participate: "http://bit.ly/vodqa-tw"
+participate: "http://bit.ly/vodqa-nov-tw"
 registrationopen: "true"
 webinar: true
-tagline: "Looking to automate your non functional requirements? Join us for a hands-on workshop on Puppeteer."
+tagline: "How to develop and deploy web applications with Docker technologies ? Join us for a hands-on workshop on Docker."
 sessions:
-  - title: ""
+  - title: "Docker Workshop"
     agenda:
       - time: "09:45 AM"
         title: "Welcome Note"
       - time: "10:00 AM"
-        title: "Puppeteer - Workshop"
-        speaker: "Shoban Manohar and Ramakrishnan Kandasamy"
-      - time: "01:00 PM"
+        title: "Docker : Hands-on Workshop"
+        speaker: "Sathya Subramani & U Ravi Prasanth"
+      - time: "12:30 PM"
         title: "Closing Note & Feedback"
 ---
