[Dhivya] updating tag line

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="action" class="feature">
   <div class="tagline">
     
-      <p>How to develop and deploy web applications with Docker technologies ? Join us for a hands-on workshop on Docker.</p>
+      <p>Looking for containerising your test suites or application ? Join us for a hands-on workshop on Docker.</p>
     
   </div>
     <div class="row actions">
