[Ramki] Update talk submission link

--- a/content/2016-12.html
+++ b/content/2016-12.html
@@ -1,38 +1,29 @@
 ---
 start: 2016-12-03 11:00
 edition: 1
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLScGD_G14Q4jPlK1HkwkhG-C1Pg4ormq0PWHPDlQoB9lNOV-GQ/viewform"
 participate: "https://www.meetup.com/VodQA-Coimbatore/events/235458537/"
 agenda:
-  -
-    time: "10:00 AM"
+  - time: "10:00 AM"
     title: "Registrations"
-  -
-    time: "10:30 AM"
+  - time: "10:30 AM"
     title: "History of test automation"
     subtitle: "Test Automation has come a long way starting more than 20 years before. In this talk, we take you through the journey of how test automation transformed with tools, technologies and approaches all these years and touch upon on its current state."
     speaker: "Nanthakumar Arumugam - Lead Consultant, ThoughtWorks."
-  -
-    time: "11:00 AM"
+  - time: "11:00 AM"
     title: "Selenium & Page object model"
     subtitle: "Come let us see if page object pattern really makes the code lot readable and easily maintainable with an example."
     speaker: "Sravanthi Singaraju - Consultant, ThoughtWorks and Arvind Srinivasan V - Senior Consultant, ThoughtWorks"
-  -
-    time: "11:30 AM"
+  - time: "11:30 AM"
     title: "Break"
-  -
-    time: "11:45 PM"
+  - time: "11:45 PM"
     title: "Techniques and tricks in using locators"
     subtitle: "Know how to use locators with demo of how locators perform on each browser which will help you decide the locator which suits you best."
     speaker: "Sriram Subramanian - Senior Consultant, ThoughtWorks."
-  -
-    time: "12:15 PM"
+  - time: "12:15 PM"
     title: "Behavior Driven Tests with Selenium Webdriver"
     subtitle: "Behavior-driven development (BDD) is a software development methodology in which an application is specified and designed by describing how its behaviour should appear to an outside observer. The same can be used while developing tests as well which has various advantages. This session will show how to build Behaviour Driven tests using Cucumber and Selenium-Webdriver."
     speaker: "Sandhya S - Lead Consultant, ThoughtWorks."
-  -
-    time: "1:00 PM"
+  - time: "1:00 PM"
     title: "Networking & Lunch"
 ---
-
-
