--- a/content/2017-02.html
+++ b/content/2017-02.html
@@ -1,30 +1,22 @@
 ---
 start: 2017-02-18 11:00
 edition: 2
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLScGD_G14Q4jPlK1HkwkhG-C1Pg4ormq0PWHPDlQoB9lNOV-GQ/viewform"
 participate: "https://www.meetup.com/VodQA-Coimbatore/events/237039015/"
 agenda:
-  -
-    time: "10:00 AM"
+  - time: "10:00 AM"
     title: "Registrations"
-  -
-    time: "10:30 AM"
+  - time: "10:30 AM"
     title: " Deliver - Anything, Anywhere, Anytime "
     speaker: "Poornima Sarangapani, Senior Consultant - ThoughtWorks."
-  -
-    time: "11:15 AM"
+  - time: "11:15 AM"
     title: " Dockerize your tests "
     speaker: "Abinaya Veluswamy - Senior Consultant & Agalya Dhandapani - Senior Consultant , ThoughtWorks."
-  -
-    time: "12:00 PM"
+  - time: "12:00 PM"
     title: "Break"
-  -
-    time: "12:15 PM"
+  - time: "12:15 PM"
     title: " A glimpse into mobile app testing using appium "
     speaker: "Thivya Lakshimi, Consultant - ThoughtWorks."
-  -
-    time: "1:00 PM"
+  - time: "1:00 PM"
     title: "Networking"
 ---
-
-
