--- a/content/2017-05.html
+++ b/content/2017-05.html
@@ -1,16 +1,12 @@
 ---
 start: 2017-05-18 11:00
 edition: 3
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLScGD_G14Q4jPlK1HkwkhG-C1Pg4ormq0PWHPDlQoB9lNOV-GQ/viewform"
 participate: "https://www.meetup.com/VodQA-Coimbatore/events/239816916/"
 agenda:
-  -
-    time: "6:00 PM"
+  - time: "6:00 PM"
     title: "Welcome Note"
-  -
-    time: "6:30 PM"
+  - time: "6:30 PM"
     title: "Workshop:An Approach to Application Security"
     speaker: "Harinee Muralinath and Jaydeep Chakrabarty"
 ---
-
-
