--- a/content/2018-05.html
+++ b/content/2018-05.html
@@ -1,36 +1,25 @@
 ---
 start: 2018-05-05 11:00
 edition: 5
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLScGD_G14Q4jPlK1HkwkhG-C1Pg4ormq0PWHPDlQoB9lNOV-GQ/viewform"
 participate: "https://www.meetup.com/VodQA-Coimbatore/events/249937260/"
 agenda:
-  -
-    time: "9:30 AM"
+  - time: "9:30 AM"
     title: "Registrations"
-  -
-    time: "10:00 AM"
+  - time: "10:00 AM"
     title: "Current business trends that are driving API development"
-  -
-    time: "10:30 AM"
+  - time: "10:30 AM"
     title: "Components of HTTP requests and responses, including authentication models, and how to inspect HTTP traffic"
-  -
-    time: "11:30 PM"
+  - time: "11:30 PM"
     title: "Break"
-  -
-    time: "11:45 PM"
+  - time: "11:45 PM"
     title: "Types of API testing & API testing tools"
-  -
-    time: "12:45 PM"
+  - time: "12:45 PM"
     title: "Lunch"
-  -
-    time: "2:00 PM"
+  - time: "2:00 PM"
     title: "API Description Languages"
-  -
-    time: "2:30 PM"
+  - time: "2:30 PM"
     title: "API test automation"
-  -
-    time: "4:00 PM"
+  - time: "4:00 PM"
     title: "High Tea and Networking"
 ---
-
-
