--- a/content/2018-09.html
+++ b/content/2018-09.html
@@ -1,34 +1,26 @@
 ---
 start: 2018-09-01 9:30
 edition: 6
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLScGD_G14Q4jPlK1HkwkhG-C1Pg4ormq0PWHPDlQoB9lNOV-GQ/viewform"
 participate: "https://www.meetup.com/VodQA-Coimbatore/events/253745001/"
 agenda:
-  -
-    time: "9:30 AM"
+  - time: "9:30 AM"
     title: "Registrations"
-  -
-    time: "10:00 AM"
+  - time: "10:00 AM"
     title: "Welcome Note"
-  -
-    time: "10:15 AM"
+  - time: "10:15 AM"
     title: "Why Security?"
     speaker: "Agalya Dhandapani, Surender Srinivasan M - ThoughtWorks."
-  -
-    time: "11:15 AM"
+  - time: "11:15 AM"
     title: "Break"
-  -
-    time: "11:30 PM"
+  - time: "11:30 PM"
     title: "Threat modelling & Attack Trees"
     speaker: "Agalya Dhandapani, Surender Srinivasan M - ThoughtWorks."
-  -
-    time: "1:00 PM"
+  - time: "1:00 PM"
     title: "Lunch"
-  -
-    time: "2:00 PM"
+  - time: "2:00 PM"
     title: "Top 10 attacks cautioned by OWASP community - with Hands-on"
     speaker: "Ramakrishnan Kandasamy, Jayachandran S - ThoughtWorks."
-  -
-    time: "4:30 PM"
+  - time: "4:30 PM"
     title: "High Tea and Networking"
 ---
