--- a/content/2019-12.html
+++ b/content/2019-12.html
@@ -1,7 +1,7 @@
 ---
 start: 2019-12-07 09:30
 edition: 8
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLScGD_G14Q4jPlK1HkwkhG-C1Pg4ormq0PWHPDlQoB9lNOV-GQ/viewform"
 participate: "https://www.meetup.com/VodQA-Coimbatore/events/266458853/"
 agenda:
   - time: "9:30 AM"
@@ -9,7 +9,6 @@ agenda:
   - time: "9:45 AM"
     title: "Taiko & Gauge : What & Why every QA should know"
     speaker: "Sathya Subramani - Consultant & U Ravi Prasanth - Consultant, ThoughtWorks."
-  -
-    time: "1:00 PM"
+  - time: "1:00 PM"
     title: "Lunch and Networking"
 ---
