--- a/content/2020-08.html
+++ b/content/2020-08.html
@@ -1,7 +1,7 @@
 ---
 start: 2020-09-05 09:45
 edition: 9
-talk: "https://docs.google.com/forms/d/e/1FAIpQLSfDft1fIMbuftL6cRQ1qsh4ouZ458zJfFhFR2gZy8f16lqiIg/viewform?usp=send_form"
+talk: "https://docs.google.com/forms/d/e/1FAIpQLScGD_G14Q4jPlK1HkwkhG-C1Pg4ormq0PWHPDlQoB9lNOV-GQ/viewform"
 participate: "https://thoughtworks.zoom.us/webinar/register/WN_hAo4bVlkRQeR01270inbSg"
 webinar: true
 sessions:
