[Ramki] Switch to new thoughtworks brand styles

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <meta name="application-name" content="Sample PWA" />
     <meta name="msapplication-TileImage" content="favicon.png" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap"
       rel="stylesheet"
     />
   </head>
